--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,49 +1,48 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Sansita+Swashed:wght@300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Sansita+Swashed:wght@300..900&display=swap");
 
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
-    --font-sansita: 'Sansita Swashed', sans-serif;
-    --font-poppins: 'Poppins', sans-serif;
-    --color-brown-100: rgba(217, 178, 140, 1);
-    --color-brown-200: rgba(194, 153, 112, 1);
-    --color-brown-300: rgba(174, 120, 66, 1);
-    --color-brown-400: rgba(143, 89, 36, 1);
-    --color-brown-500: rgba(122, 76, 31, 1);
-    --color-grey-100: rgba(168, 179, 190, 1);
-    --color-grey-200: rgba(138, 153, 168, 1);
-    --color-grey-300: rgba(98, 115, 132, 1);
-    --color-grey-400: rgba(71, 89, 107, 1);
-    --color-grey-500: rgba(57, 76, 96, 1);
-    --color-grey-600: rgba(55, 69, 83, 1);
-    --color-grey-700: rgba(51, 62, 77, 1);
-    --color-grey-800: rgba(42, 55, 70, 1);
-    --color-grey-900: rgba(34, 45, 57, 1);
-    --color-brown-600: rgba(100, 60, 27, 1);
-    --color-brown-700: rgba(87, 53, 25, 1);
-    --color-brown-800: rgba(78, 48, 24, 1);
-    --color-brown-900: rgba(62, 37, 19, 1);
-    --color-brown-950: rgba(54, 32, 18, 1);
-    --color-grey-950: rgba(27, 35, 45, 1);
-    --color-leafy-100: rgba(166, 217, 140, 1);
-    --color-leafy-200: rgba(133, 194, 112, 1);
-    --color-leafy-300: rgba(87, 170, 60, 1);
-    --color-leafy-400: rgba(57, 138, 40, 1);
-    --color-leafy-500: rgba(42, 100, 22, 1);
-    --color-leafy-600: rgba(30, 88, 18, 1);
-    --color-leafy-700: rgba(19, 81, 16, 1);
-    --color-leafy-800: rgba(14, 67, 16, 1);
-    --color-leafy-900: rgba(10, 56, 14, 1);
-    --color-leafy-950: rgba(6, 40, 10, 1);
-    --inset-shadow-md: inset 0 -3px 3px rgba(0, 0, 0, 0.25);
+  --font-sansita: "Sansita Swashed", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --color-brown-100: rgba(217, 178, 140, 1);
+  --color-brown-200: rgba(194, 153, 112, 1);
+  --color-brown-300: rgba(174, 120, 66, 1);
+  --color-brown-400: rgba(143, 89, 36, 1);
+  --color-brown-500: rgba(122, 76, 31, 1);
+  --color-grey-100: rgba(168, 179, 190, 1);
+  --color-grey-200: rgba(138, 153, 168, 1);
+  --color-grey-300: rgba(98, 115, 132, 1);
+  --color-grey-400: rgba(71, 89, 107, 1);
+  --color-grey-500: rgba(57, 76, 96, 1);
+  --color-grey-600: rgba(55, 69, 83, 1);
+  --color-grey-700: rgba(51, 62, 77, 1);
+  --color-grey-800: rgba(42, 55, 70, 1);
+  --color-grey-900: rgba(34, 45, 57, 1);
+  --color-brown-600: rgba(100, 60, 27, 1);
+  --color-brown-700: rgba(87, 53, 25, 1);
+  --color-brown-800: rgba(78, 48, 24, 1);
+  --color-brown-900: rgba(62, 37, 19, 1);
+  --color-brown-950: rgba(54, 32, 18, 1);
+  --color-grey-950: rgba(27, 35, 45, 1);
+  --color-leafy-100: rgba(166, 217, 140, 1);
+  --color-leafy-200: rgba(133, 194, 112, 1);
+  --color-leafy-300: rgba(87, 170, 60, 1);
+  --color-leafy-400: rgba(57, 138, 40, 1);
+  --color-leafy-500: rgba(42, 100, 22, 1);
+  --color-leafy-600: rgba(30, 88, 18, 1);
+  --color-leafy-700: rgba(19, 81, 16, 1);
+  --color-leafy-800: rgba(14, 67, 16, 1);
+  --color-leafy-900: rgba(10, 56, 14, 1);
+  --color-leafy-950: rgba(6, 40, 10, 1);
+  --inset-shadow-md: inset 0 -3px 3px rgba(0, 0, 0, 0.25);
 }
 
 @layer base {
-
-    h1,
-    h2,
-    h3,
-    p {
-        font-family: var(--font-poppins);
-    }
+  h1,
+  h2,
+  h3,
+  p {
+    font-family: var(--font-poppins);
+  }
 }
